Fix spacing

--- a/src/stylesheets/modules/_mod-banner.scss
+++ b/src/stylesheets/modules/_mod-banner.scss
@@ -21,9 +21,11 @@
     margin-bottom: 28px;
     h1 {
       line-height: 1.1;
+      margin: 0;
     }
   }
   .btn {
+    margin-top: 31px;
     margin-left: 5px;
     padding: 0 33px;
   }
@@ -67,9 +69,6 @@
   }
   .banner-content {
     margin-left: 75px;
-    h1 {
-      margin: 0;
-    }
     .btn {
       margin-top: 40px;
     }
